# shellvetica

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs  nodes.rs  parser.rs  shellvetica.rs  styles.rs
